Fix: небольшие изменения по документации